--- a/calculator.html
+++ b/calculator.html
@@ -4,11 +4,11 @@
 
 <script type="text/javascript">
 
-function cube() {
+function cube(n) {
 
 var num = document.getElementById("n1");
 
-num.value = Math.pow(num.value, 3);
+num.value = Math.pow(num.value, n);
 
 }
 
@@ -24,7 +24,8 @@ Number:
 
 <input type="text" id="n1"><p>
 
-<button onclick="cube()"> x^3 </button>
+<button onclick="cube(3)"> x^3 </button>
+<button onclick="cube(4)"> x^4 </button>
 
 </body>
 
